fix overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -346,7 +346,7 @@ h2{
 	bottom: 0;
 	left:0;
 	right:0;
-	overflow: scroll;
+	overflow-y: scroll;
 	z-index: 1;
 }
 .background-blue{
